frontend/test/should_fail/basic_102.grg
using basic_model_002;

rule dummy {
  i:A;
  if { !(typeof(i)>NOTTHERE); }
  replace {
  }
}
